# pcb-cost-estimator

./: .gitignore  CLAUDE.md  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_reporting.py
.github/workflows/: ci.yml
config/: config.example.yaml  cost_model.yaml  llm_enrichment.yaml
config/llm_prompts/: component_classification_v1.yaml  obsolescence_detection_v1.yaml  price_reasonableness_v1.yaml
data/sample_boms/: README.md  alternative_headers.tsv  example_bom.csv  with_dnp_markers.csv
docs/: LLM_ENRICHMENT.md  REPORTING.md
examples/: estimate_cost_example.py  generate_reports_example.py  parse_bom_example.py
scripts/: create_sample_xlsx.py
src/pcb_cost_estimator/: __init__.py  bom_parser.py  cli.py  component_intelligence.py  config.py  cost_estimator.py  distributor_cache.py  distributor_client.py  farnell_client.py  llm_cache.py  llm_enrichment.py  llm_provider.py  local_component_db.py  logger.py  models.py  prompt_templates.py  reporting.py  rs_components_client.py  tme_client.py
tests/: README.md  __init__.py  test_bom_parser.py  test_bom_parser_edge_cases.py  test_cli.py  test_config.py  test_cost_estimator.py  test_cost_estimator_detailed.py  test_distributor_clients.py  test_end_to_end.py  test_llm_enrichment.py  test_llm_integration_fixtures.py  test_provenance.py  test_reporting.py  test_sourcing_modes.py
tests/fixtures/: arduino_shield_simple.csv  iot_board_medium.csv  mixed_signal_complex.csv
tests/fixtures/api_responses/: farnell_lm358n.json  farnell_no_results.json  (+6 more)
(+3 files in other folders)
