[metadata]
name = pcb-cost-estimator
version = 0.1.0
description = PCB cost estimation tool using AI and manufacturer data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/pcb-cost-estimator
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=2.0.0
    pydantic>=2.0.0
    openai>=1.0.0
    anthropic>=0.18.0
    click>=8.0.0
    pyyaml>=6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pcb-cost = pcb_cost_estimator.cli:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.venv,venv
ignore = E203, W503
